--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
 			</section>
 
 		<!-- Three -->
+		<!-- Three -->
 			<section id="three" class="main style1 special">
 				<div class="container">
 					<header class="major">
@@ -149,7 +150,7 @@
 					<p>All projects to showcase my skills in data analytics. </p>
 					<div class="row gtr-150">
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/tableau-pic.jpg" alt="Graphs" height="240"></span>
+							<span class="image fit"><img src="images/Tableau Dashboard.png" alt="Graphs" height="240"></span>
 							<h3>Tableau Public</h3>
 							<p style="text-align:center">A link to all my public dashboards that were created with Tableau Public.</p>
 							<ul class="actions special">
@@ -165,7 +166,7 @@
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium" id="projects-group">
-							<span class="image fit"><img src="myriam-jessier-eveI7MOcSmw-unsplash.jpg" alt="" height="240"></span>
+							<span class="image fit"><img src="images/D205 pictures.png" alt="" height="240"></span>
 							<h3>Data Acquisition</h3>
 							<p style="text-align:left"> A project to build proficiency in Standard Query Language (SQL) and look at the beginning stages of the data analytics life cycle. <br /><br /><strong>Skills:</strong> Data Acquisition, Data Exploration, Data Models<br /><strong>Tools Used:</strong> Excel, PostgreSQL</p>
 							<ul class="actions special">
@@ -179,7 +180,7 @@
 				<div class="container">
 					<div class="row gtr-150">
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="rc-xyz-nft-gallery-InWI1lteYfU-unsplash.jpg" alt="Dashboard created in Tableau" height="240"></span>
+							<span class="image fit"><img src="images/D206 picture.png" alt="Dashboard created in Tableau" height="240"></span>
 							<h3>Data Cleaning</h3>
 							<p style="text-align:left">A transformation and cleaning of a hospital data set. <br /><br /><strong>Skills:</strong> Data Cleaning, Data Exploration, Data Prediction<br /><strong>Tools Used:</strong> Excel, Python</p>
 							<ul class="actions special">
@@ -187,7 +188,7 @@
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="campaign-creators-774sCXD0dDU-unsplash.jpg" alt="Dashboard created in Tableau" height="240"></span>
+							<span class="image fit"><img src="images/D207 picture.png" alt="Dashboard created in Tableau" height="240"></span>
 							<h3>Exploratory Data Analysis</h3>
 							<p style="text-align:left">A look at stastical principles that support the Data Analytics Life Cycle.<br /><br /><strong>Skills:</strong> Chi-Square Analysis, Parametric Tests<br /><strong>Tools Used:</strong> Python, Excel</p>
 							<ul class="actions special">
@@ -195,7 +196,7 @@
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium" id="projects-group">
-							<span class="image fit"><img src="myriam-jessier-eveI7MOcSmw-unsplash.jpg" alt="" height="240"></span>
+							<span class="image fit"><img src="images/D208 picture.png" alt="" height="240"></span>
 							<h3>Predictive Modeling</h3>
 							<p style="text-align:left"> A project to build on initial data preparation, cleaning, and analysis, enabling us to make assertions vital to organizational needs.<br /><br /><strong>Skills:</strong> Data Acquisition, Data Exploration, Data Models<br /><strong>Tools Used:</strong> Excel, PostgreSQL</p>
 							<ul class="actions special">
@@ -209,7 +210,7 @@
 				<div class="container">
 					<div class="row gtr-150">
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="rc-xyz-nft-gallery-InWI1lteYfU-unsplash.jpg" alt="Dashboard created in Tableau" height="240"></span>
+							<span class="image fit"><img src="images/D209 picture.png" alt="Dashboard created in Tableau" height="240"></span>
 							<h3>Data Mining I</h3>
 							<p style="text-align:left">A transformation and cleaning of a hospital data set. <br /><br /><strong>Skills:</strong> Data Cleaning, Data Exploration, Data Prediction<br /><strong>Tools Used:</strong> Excel, Python</p>
 							<ul class="actions special">
@@ -217,7 +218,7 @@
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="campaign-creators-774sCXD0dDU-unsplash.jpg" alt="Dashboard created in Tableau" height="240"></span>
+							<span class="image fit"><img src="images/D210 picture.png" alt="Dashboard created in Tableau" height="240"></span>
 							<h3>Representation and Reporting</h3>
 							<p style="text-align:left">A look at stastical principles that support the Data Analytics Life Cycle.<br /><br /><strong>Skills:</strong> Chi-Square Analysis, Parametric Tests<br /><strong>Tools Used:</strong> Python, Excel</p>
 							<ul class="actions special">
@@ -225,7 +226,7 @@
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium" id="projects-group">
-							<span class="image fit"><img src="myriam-jessier-eveI7MOcSmw-unsplash.jpg" alt="" height="240"></span>
+							<span class="image fit"><img src="images/D211 picture.png" alt="" height="240"></span>
 							<h3>Advanced Data Acquisition</h3>
 							<p style="text-align:left"> A project to build on initial data preparation, cleaning, and analysis, enabling us to make assertions vital to organizational needs.<br /><br /><strong>Skills:</strong> Data Acquisition, Data Exploration, Data Models<br /><strong>Tools Used:</strong> Excel, PostgreSQL</p>
 							<ul class="actions special">
@@ -239,7 +240,7 @@
 				<div class="container">
 					<div class="row gtr-150">
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="rc-xyz-nft-gallery-InWI1lteYfU-unsplash.jpg" alt="Dashboard created in Tableau" height="240"></span>
+							<span class="image fit"><img src="images/D212 picture.png" alt="Dashboard created in Tableau" height="240"></span>
 							<h3>Data Mining II</h3>
 							<p style="text-align:left">A project to look at discovering patterns and correlations within a large data set with hospital data.<br /><br /><strong>Skills:</strong> Hierarchical Clustering, Market Basket Analysis, PCA<br /><strong>Tools Used:</strong> Excel, Python</p>
 							<ul class="actions special">
@@ -247,7 +248,7 @@
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="campaign-creators-774sCXD0dDU-unsplash.jpg" alt="Dashboard created in Tableau" height="240"></span>
+							<span class="image fit"><img src="images/D213 picture.png" alt="Dashboard created in Tableau" height="240"></span>
 							<h3>Advanced Data Analytics</h3>
 							<p style="text-align:left">A project to look at reviews to predict sentiments along with a time series analysis on projected income for a hospital chain. <br /><br /><strong>Skills:</strong> Machine Learning, Neural Networks, Natural Language Processing (NLP), Time Series Analysis<br /><strong>Tools Used:</strong> Python, Excel</p>
 							<ul class="actions special">
@@ -255,7 +256,7 @@
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium" id="projects-group">
-							<span class="image fit"><img src="myriam-jessier-eveI7MOcSmw-unsplash.jpg" alt="" height="240"></span>
+							<span class="image fit"><img src="images/D214 picture.png" alt="" height="240"></span>
 							<h3>Linear Regression: Metabolic Rates</h3>
 							<p style="text-align:left"> A project to look at linear regression of metabolic rates of living organisms.<br /><br /><strong>Skills:</strong>Linear Regression, Data Cleaning, Data Exploration<br /><strong>Tools Used:</strong> Excel, PostgreSQL</p>
 							<ul class="actions special">
